# mephi

./: .gitignore
Assembler/: lab0.asm  lab1 (2).asm  lab2 (1).asm  lab3 (1).asm  lab43.asm  lab50.asm
C/c-struct-2021/: binmaker.c  tp4.c  tp5.c  tp6.c  tp7.c  описание.txt
C/c-struct-2021/lab3/: CMakeLists.txt
C/c-struct-2021/lab7/: fbin  main.c
C/c-struct-2022/lab/: CMakeLists.txt  lab1-0.c  lab1-1.c  lab1-29.c  lab1-demo.c  lab2-0.c  lab2-10.c  lab2-demo.c  lab3-17a.c  lab3-17b-v1.c  lab3-17b-v2.c  lab3-demo.c  lab4-17.c  lab4-demo.c  main.c  oldlab2-10.c  tree234.c  tree234_test.c
C/c-struct-2022/lab/includes/: lab1-0.h  lab1-1.h  lab1-29.h  lab1-demo.h  lab2-0.h  lab2-10.h  lab2-demo.h  lab3-17a.h  lab3-17b-v1.h  lab3-17b-v2.h  lab3-demo.h  lab4-demo.h  oldlab2-10.h  tree234.h
C/c-struct-2022/lab1/: CMakeLists.txt  lab11.c  main.c
C/c-struct-2022/lab1/includes/: lab1-demo.c  lab10.c  lab11.c  lab11.h
C/c-struct-2022/lab1_0/: CMakeLists.txt  main.c
C/c-struct-2022/lab1_0/includes/: method.c  model.h
C/lab3/: lab3.h  main.c  shellsort.c
GIMP/: remove_white_areas.py
