cmake_minimum_required(VERSION 3.25)
project(lab C)
set(CMAKE_C_STANDARD 23)
#add_executable(lab main.c lab2-0.c includes/lab2-0.h)
#add_executable(lab main.c lab1-1.c includes/lab1-1.h)
#add_executable(lab main.c lab1-29.c includes/lab1-29.h)
#add_executable(lab main.c lab2-10.c includes/lab2-10.h)
#add_executable(lab main.c lab3-17a.c includes/lab3-17a.h)
#add_executable(lab main.c lab3-17b.c includes/lab3-17b.h)
#add_executable(lab main.c lab2-demo.c includes/lab2-demo.h)
#add_executable(lab main.c lab3-demo.c includes/lab3-demo.h)
add_executable(lab main.c lab3-17b-v2.c includes/lab3-17b-v2.h)
include_directories(includes/)